# Calculator-API

./: README.md  pyproject.toml
calculatorapi/: __init__.py  api_helper.py  calculatorapi_client.py  configuration.py
calculatorapi/controllers/: base_controller.py  simple_calculator_controller.py
calculatorapi/exceptions/: api_exception.py
calculatorapi/http/: http_call_back.py  http_method_enum.py  http_request.py  http_response.py
calculatorapi/models/: operation_type_enum.py
calculatorapi/utilities/: file_wrapper.py
doc/: client.md
doc/controllers/: simple-calculator.md
doc/models/: operation-type-enum.md
