[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]
[project]
name = "calculatorapi"
description = "Calculator"
version = "1.0.0"
requires-python = ">=3.7"
authors = [{name = "APIMatic Code Generator", email = "support@apimatic.io"}]
dependencies = ["apimatic-core~=0.2.0", "apimatic-core-interfaces~=0.1.0", "apimatic-requests-client-adapter~=0.1.0", "python-dateutil~=2.8.1", "enum34~=1.1, >=1.1.10"]
[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
